# django-cloudevents

./: .pre-commit-config.yaml  LICENSE.txt  manage.py  pyproject.toml  ruff_defaults.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  tests.yml
django_cloudevents/: views.py
src/django_cloudevents/: __init__.py  _compat.py  _conf.py  apps.py  conf.py  processors.py  signals.py  views.py
src/django_cloudevents/contrib/: __init__.py  channels.py
src/django_cloudevents/db/: apps.py  field_docs.py  model.py
testproj/: processors.py  settings.py
tests/: conftest.py  test_processors.py  test_views.py
tests/contrib/: test_channels.py
