[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-cloudevents"
description = "Django application to handle CloudEvent Webhook incoming requests"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Christian Hartung", email = "6785871+hartungstenio@users.noreply.github.com" },
]
keywords = ["django"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "asgiref>=3.3",
  "cloudevents",
  "django>=4.2",
  "typing-extensions; python_version<'3.12'"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/hartungstenio/django-cloudevents#readme"
Issues = "https://github.com/hartungstenio/django-cloudevents/issues"
Source = "https://github.com/hartungstenio/django-cloudevents"

[dependency-groups]
dev = [
  "coverage[toml]>=6.5",
  "django-stubs>=4.2",
  "faker",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-django",
]

[tool.coverage.run]
source_pkgs = ["django_cloudevents", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
cloudevents = [
  "src/django_cloudevents",
  "*/django-cloudevents/src/django_cloudevents"
]
tests = ["tests", "*/django-cloudevents/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.deptry]
known_first_party = ["django_cloudevents"]

[tool.django-stubs]
django_settings_module = "testproj.settings"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.targets.sdist]
exclude = ["/.devcontainer", "/.github"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest-asyncio",
  "pytest-django",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
  { value = "django>=4.2,<5.0", if = ["4.2"] },
  { value = "django>=5.0,<5.1", if = ["5.0"] },
  { value = "django>=5.1,<5.2", if = ["5.1"] },
  { value = "django>=5.2,<6.0", if = ["5.2"] },
]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["4.2"]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["5.0", "5.1"]
python = ["3.10", "3.11", "3.12"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["5.2"]
python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-static-analysis]
skip-install = false
config-path = "ruff_defaults.toml"
dependencies = ["ruff==0.14.7"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "django_cloudevents.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.pytest]
DJANGO_SETTINGS_MODULE = "testproj.settings"
pythonpath = [".", "src"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint]
extend-select = ["DJ"]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*" = ["RUF012"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
